--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 altair==5.4.1
 attrs==24.2.0
 beautifulsoup4==4.12.3
-blinker==1.8.2
+blinker==1.9.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -10,11 +10,12 @@ colorama==0.4.6
 contourpy==1.3.0
 cycler==0.12.1
 entrypoints==0.4
-Faker==30.8.0
+Faker==30.8.2
 favicon==0.7.0
 fonttools==4.54.1
 gitdb==4.0.11
 GitPython==3.1.43
+graphviz==0.20.3
 htbuilder==0.6.2
 idna==3.10
 Jinja2==3.1.4
@@ -29,36 +30,32 @@ MarkupSafe==3.0.2
 matplotlib==3.9.2
 mdurl==0.1.2
 more-itertools==10.5.0
-narwhals==1.10.0
-numpy==2.1.2
-packaging==24.1
+narwhals==1.13.3
+numpy==2.1.3
+packaging==24.2
 pandas==2.2.3
-patsy==0.5.6
-pillow==10.4.0
+pillow==11.0.0
 plotly==5.24.1
-plotly-express==0.4.1
 prometheus_client==0.21.0
-protobuf==5.28.2
-pyarrow==17.0.0
+protobuf==5.28.3
+pyarrow==18.0.0
 pydeck==0.9.1
 Pygments==2.18.0
-pymdown-extensions==10.11.2
+pymdown-extensions==10.12
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
 requests==2.32.3
-rich==13.9.2
-rpds-py==0.20.0
-scipy==1.14.1
+rich==13.9.4
+rpds-py==0.21.0
 six==1.16.0
 smmap==5.0.1
 soupsieve==2.6
 st-annotated-text==4.0.1
 st-theme==1.2.3
-statsmodels==0.14.4
-streamlit==1.39.0
+streamlit==1.40.0
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
 streamlit-embedcode==0.1.2
